[package]
edition = "2021"
name = "authentication_service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
axum = {version = "0.6.10", features = ["ws"]}
axum-macros = "0.3.5"
bincode = "1.3.3"
clap = { version = "4.0.18", features = ["derive"] }
confy = {version = "0.5.1", features = ["yaml_conf"], default-features = false}
corelib = { path="../corelib" }
env_logger = "0.10.0"
futures = "0.3.21"
hyper = {version = "0.14.19", features = ["full"]}
log = "0.4.17"
rand = "0.8.5"
serde = {version = "1.0.147", features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0"
tokio = {version = "1.19.2", features = ["full"]}
tower = "0.4.13"
tracing = "0.1"
versions = "4.1.0"
