[package]
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.20"
clap = {version = "4.0.18", features = ["derive"]}
colored = "2.0.0"
confy = {version = "0.5.0", features = ["yaml_conf"], default-features = false}
corelib = {path = "../corelib"}
ed25519-dalek = {git = "https://github.com/dalek-cryptography/ed25519-dalek", branch = "main", features = ["serde"]}
env_logger = "0.10.0"
log = "0.4.17"
openmls = {git = "https://github.com/ajnam12/openmls-fork", rev = "dc8c871", version = "0.4.1"}
openmls_rust_crypto = {git = "https://github.com/ajnam12/openmls-fork", rev = "dc8c871"}
rand = "0.8.5"
rand_07 = {package = "rand", version = "0.7"}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0"
serde_json_any_key = "2.0.0"
tls_codec = {version = "0.2.0", features = ["derive", "serde_serialize", "mls"]}
tungstenite = "0.17.2"
url = "2.2.2"
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
versions = "4.1.0"
